certmanager-lab/manifests/app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: app.sredevops.com.br
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app.sredevops.com.br
    secretName: app-tls
  rules:
  - host: app.sredevops.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
